# pastel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  nightly.yml  release.yml
crates/pastel-cli/: Cargo.toml
crates/pastel-cli/src/: main.rs  pipeline.rs
crates/pastel-cli/src/commands/: build.rs  check.rs  export.rs  fmt.rs  gen.rs  inspect.rs  lint.rs  mod.rs  plan.rs  serve.rs  syntax.rs
crates/pastel-cli/tests/: cli_tests.rs
crates/pastel-codegen/: Cargo.toml
crates/pastel-codegen/src/: html.rs  lib.rs  react.rs  tokens.rs
crates/pastel-lang/: Cargo.toml
crates/pastel-lang/src/: ast.rs  error.rs  formatter.rs  lib.rs  token.rs
crates/pastel-lang/tests/: formatter_tests.rs  include_tests.rs  integration_landing_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_layout_tests.rs  semantic_node_tests.rs  semantic_style_tests.rs
crates/pastel-lint/: Cargo.toml
crates/pastel-lint/src/: lib.rs  report.rs  rules.rs
crates/pastel-render/: Cargo.toml
crates/pastel-render/src/: export.rs  image_cache.rs  layout.rs  layout_measure.rs  layout_place.rs  lib.rs  painter.rs  painter_effects.rs  painter_leaf.rs  painter_text.rs  (+1 more)
docs/: architecture.md
docs/language-reference/: canvas.md  components.md  layout.md  nodes.md  style.md  variables-and-includes.md
examples/advanced/: main.pastel
examples/component-demo/: main.pastel
examples/dashboard/: main.pastel
examples/design-system/: main.pastel
examples/effects/: main.pastel
examples/fortune-shrine/: main.pastel
examples/hello-world/: main.pastel
examples/landing-page/: main.pastel
examples/mobile-app/: main.pastel
examples/multipage/: design.pastel
examples/paths/: main.pastel
fixtures/: conflict-test.pastel  invalid-syntax.pastel  lint-test.pastel  ns-include-test.pastel  shared-lib.pastel  simple.ir.json  simple.pastel  test-styles.css  with-components.pastel
scripts/: install.sh
(+27 files in other folders)
