[package]
name = "pastel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pastel CLI: build, check, plan, fmt, inspect, serve"

[[bin]]
name = "pastel"
path = "src/main.rs"

[dependencies]
pastel-lang = { path = "../pastel-lang" }
pastel-render = { path = "../pastel-render" }
pastel-codegen = { path = "../pastel-codegen" }
pastel-lint = { path = "../pastel-lint" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
