[package]
name = "pastel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Design System as Code — define tokens, draw UI, validate consistency, generate code"
readme = "../../README.md"
keywords = ["design-system", "design-tokens", "skia", "codegen", "cli"]
categories = ["command-line-utilities", "graphics", "development-tools"]

[[bin]]
name = "pastel"
path = "src/main.rs"

[dependencies]
pastel-lang = { path = "../pastel-lang" }
pastel-render = { path = "../pastel-render" }
pastel-codegen = { path = "../pastel-codegen" }
pastel-lint = { path = "../pastel-lint" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
