[package]
name = "pastel-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pastel design lint: check CSS/HTML against design tokens"

[dependencies]
pastel-lang = { path = "../pastel-lang" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
